end of day 7-15

--- a/src/assets/scss/global/_globals.scss
+++ b/src/assets/scss/global/_globals.scss
@@ -130,6 +130,28 @@ a {
     }
 }
 // ++++++++++++++++++++++++++++++++++++++++++++++++
+// Search
+// ++++++++++++++++++++++++++++++++++++++++++++++++
+
+.search-widget {
+    display: flex;
+    justify-content: center;
+
+    input[value="Submit"] {
+        background: white;
+        border: 1px solid $light-gray;
+        padding: 10px;
+
+        &:hover,
+        &:focus {
+            background-color: $light-gray;
+        }
+    }
+}
+
+
+
+// ++++++++++++++++++++++++++++++++++++++++++++++++
 // GRADIENTS and OVERLAYS
 // ++++++++++++++++++++++++++++++++++++++++++++++++
 .grey-gradient { /* FF3.6-15 */
