--- a/src/assets/scss/global/_custom-mixins.scss
+++ b/src/assets/scss/global/_custom-mixins.scss
@@ -28,3 +28,28 @@
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'blur\'><feGaussianBlur stdDeviation=\'#{$px}\' /></filter></svg>#blur");
     filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='#{$px}');
 }
+
+@mixin reorder() {
+    .post-grid-block-inside-cell {
+        &.reorder-1 {
+            order: 1;
+            .entry-inner {
+                &:before {
+                    left: initial !important;
+                    transform: translate(50%, -50%) !important;
+                    right: 0 !important;
+                }
+
+                &:after {
+                    left: initial !important;
+                    right: 0 !important;
+                    transform: translate(50%, -50%) !important;
+                }
+            }
+        }
+
+        &.reorder-2 {
+            order: 2;
+        }
+    };
+}
