--- a/src/assets/scss/templates/_post.scss
+++ b/src/assets/scss/templates/_post.scss
@@ -3,3 +3,245 @@
 Individual post stylings
 
 */
+
+// standard post
+.post {
+    @include xy-grid;
+    margin-top: 0;
+
+    @include breakpoint(medium) {
+        margin-top: 45px;
+    }
+
+    // basic styles
+    ul, ol, pre {
+        margin-left: rem-calc(30);
+        margin-bottom: rem-calc(30);
+
+        & ul {
+            margin-bottom: 0;
+        }
+    }
+
+    blockquote  {
+        width: 80%;
+        margin: 0 auto;
+        margin-bottom: rem-calc(30);
+
+        cite {
+            text-align: right;
+        }
+    }
+
+    dl {
+        // background-color: $light-gray;
+        padding-top: rem-calc(20);
+        padding-left: rem-calc(20);
+        padding-right: rem-calc(20);
+
+        dt {
+
+        }
+
+        dd {
+            padding-bottom: rem-calc(20);
+            padding-left: 10px;
+            border-bottom: 1px solid $secondary-color;
+            margin-bottom: rem-calc(20); 
+        }
+    }
+
+    // for embedded videos 
+    iframe {
+        @include flex;
+        margin: 0 auto;
+        // width: 90%;
+    }
+
+    .entry-media {
+        @include xy-cell(12, $gutters: 0);
+
+        @include breakpoint(large) {
+            @include xy-cell(6, $gutters: 0);
+        }
+
+        .entry-media-thumb {
+            width: 100%;
+            height: 50vh;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+
+            @include breakpoint(large) {
+                height: 100%;
+            }
+        }
+    }
+
+    .entry-inner {
+        @include xy-cell(12, $gutters: 100);
+        padding-top: rem-calc(60);
+        margin: 0 auto;
+
+        @include breakpoint(large) {
+            @include xy-cell(6, $gutters: 100);
+            margin: 0 auto;
+        }
+
+        .entry-header {
+            @include flex;
+            @include flex-direction(column);
+            align-items: center;
+
+            .entry-meta {
+                .cat-links {
+
+                    a {
+                        padding: 13px 15px;
+                        background-color: $secondary-color; 
+                        width: 100%;
+                        height: 100%;
+                        color: $white;
+
+                        &:hover,
+                        &:focus {
+                            color: $black;
+                        }
+                    }
+                }
+            }
+
+            h1 {
+                text-align: center;
+                padding-top: rem-calc(30);
+                padding-bottom: rem-calc(30);
+            }
+    
+            .entry-posted {
+                .posted-info {
+                    font-style: italic;
+                }
+
+                .author {
+                    text-transform: uppercase;
+                    font-style: initial;
+                }
+
+                .posted-on {
+                    a {
+                        color: $black;
+                        text-transform: uppercase;
+                        font-style: initial;
+
+                        .updated {
+                            text-transform: capitalize;
+                            font-size: 0.8rem;
+
+                            &:before {
+                                text-transform: none;
+                                font-style: italic;
+                                content: " - updated: ";
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        .entry-content{
+            padding-top: rem-calc(100);
+            
+            .nav-links {
+                position: relative;
+                margin: 2em auto 0;
+                max-width: 72%;
+                padding: 3em 0;
+                text-align: center;
+
+                &:before {
+                    content: "";
+                    left: 50%;
+                    position: absolute;
+                    top: 0;
+                    border-top: 1px solid #e0e0e0;
+                    left: 37.5%;
+                    right: 37.5%;
+                }
+
+                &:after {
+                    background-color: #e7ae01;
+                    border-radius: 12px;
+                    height: 12px;
+                    margin: -6px 0 0 -6px;
+                    width: 12px;
+                    content: "";
+                    left: 50%;
+                    position: absolute;
+                    top: 0;
+                }
+            }
+
+            .nav-previous, 
+            .nav-next {
+                @include flex;
+                @include flex-direction(column);
+                padding-bottom: 36px;
+
+                a {
+                    color: $black;
+                    font-variant: small-caps;
+                    font-size: 1.1rem;
+
+                    &:hover .nav-title,
+                    &:focus .nav-title {
+                        text-decoration: underline;
+                    }
+
+                }
+            }
+
+            .nav-previous {
+
+
+            }
+
+            .nav-next {
+
+            }
+
+            .nav-subtitle {
+                color: #9da5ad;
+                display: block;
+                font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+                font-size: 0.8rem;
+                letter-spacing: 0.1em;
+                text-transform: uppercase;
+            }
+        }
+
+        .entry-footer {
+            padding: rem-calc(30);
+
+            &:before {
+                content: "Tags: ";
+            }
+
+            .tags-links {
+                @include flex;
+
+                a {
+                    background-color: $primary-color;
+                    padding: 10px 15px;
+                    color: $white;
+                    border-radius: 50px;
+
+                    &:hover,
+                    &:focus {
+                        color: $secondary-color;
+                    }
+                }
+            }
+        }
+    }
+}
