--- a/src/assets/scss/global/_custom-mixins.scss
+++ b/src/assets/scss/global/_custom-mixins.scss
@@ -33,16 +33,17 @@
     .post-grid-block-inside-cell {
         &.reorder-1 {
             order: 1;
+
             .entry-inner {
                 &:before {
                     left: initial !important;
                     transform: translate(50%, -50%) !important;
-                    right: 0 !important;
+                    right: 50% !important;
                 }
 
                 &:after {
                     left: initial !important;
-                    right: 0 !important;
+                    right: 50% !important;
                     transform: translate(50%, -50%) !important;
                 }
             }
