working RSS autoblogger

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,5 +1,6 @@
 @charset 'utf-8';
-
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Oswald:300&display=swap');
 
 @import 'settings';
 @import 'foundation';
@@ -97,7 +98,7 @@
 @import "templates/team";
 @import "templates/post";
 @import "templates/post-grid";
+@import "templates/chief-keith";
 
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Oswald:300&display=swap');
+
 
