--- a/src/assets/scss/global/_globals.scss
+++ b/src/assets/scss/global/_globals.scss
@@ -41,16 +41,21 @@ body {
     }
 }
 
+h1, h2, h3, h4, h5, h6 {
+    text-transform: uppercase;
+}
+
 h1 {
     font-size: 1.5rem;
     letter-spacing: 0.25rem;
+    
 
     @include breakpoint(medium) {
-        font-size: 3rem;
+        font-size: 2rem;
     }
 
     @include breakpoint(large) {
-        font-size: 4rem;
+        font-size: 2.5rem;
     }
 
     &.header {
@@ -64,29 +69,35 @@ h2 {
     font-variant: small-caps;
 
     @include breakpoint(medium) {
-        font-size: 3rem;
+        font-size: 2rem;
     }
 
     @include breakpoint(large) {
-        font-size: 4rem;
+        font-size: 2.5rem;
     }
 }
 
-.blog .entry-content-page {
-    // @include xy-grid-container;
-    padding-top: 0;
+.blog, 
+.archive.category.category-chief_keith_corner {
+    & .entry-content-page {
+        // @include xy-grid-container;
+        padding-top: 0;
 
-    @include breakpoint(medium) {
-        padding-top: 40px;
+        @include breakpoint(medium) {
+            padding-top: 40px;
+        }
     }
 }
 
-.archive .entry-content-page,
-.search .entry-content-page  {
-    padding-top: 50px;
+.archive,
+.search  {
 
-    @include breakpoint(medium) {
-        padding-top: 100px;
+    & .entry-content-page {
+        padding-top: 50px;
+
+        @include breakpoint(medium) {
+            padding-top: 100px;
+        }
     }
 }
 
@@ -98,6 +109,8 @@ ul, ol {
 .small-white-font {
     color: white;
     font-size: 0.5em;
+    margin-bottom: 0;
+    padding-bottom: 5px;
 }
 
 .yellow {
@@ -221,6 +234,7 @@ a {
     padding: rem-calc(30);
     text-align: center;
     margin-bottom: rem-calc(30);
+    margin-top: rem-calc(30);
 
     h6 {
         font-size: 2rem;
