--- a/src/assets/scss/templates/_banner-full.scss
+++ b/src/assets/scss/templates/_banner-full.scss
@@ -37,11 +37,12 @@
 
         .banner-video, .video-ended-poster {
             object-fit: cover;
-            object-position: 20% 20%;
+            object-position: top;
             position: absolute;
             height: 60%;
             bottom: 0;
             width: 100vw;
+            max-width: initial;
             z-index: -2;
 
             @include breakpoint(medium) {
@@ -68,10 +69,13 @@
                 @include flex-direction(column);
                 background-color: rgba(255,255,255,1);
                 text-align: center;
-                font-variant: small-caps;
                 color: black;
                 position: relative;
                 width: 100%;
+
+                & strong {
+                    font-variant: small-caps;
+                }
 
                 @include breakpoint(medium) {
                     width: initial;
@@ -124,7 +128,7 @@
                     position: relative;
                     line-height: 1rem;
                     font-size: 1rem;
-                    text-transform: uppercase;
+                    color: $primary-color;
                     padding: 20px 20px 20px 20px;
 
                     &:after {
