end of day 7/23

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -96,6 +96,7 @@
 @import "templates/banner-small";
 @import "templates/page-extra";
 @import "templates/team";
+@import "templates/partners";
 @import "templates/post";
 @import "templates/post-grid";
 @import "templates/chief-keith";
