--- a/src/assets/scss/templates/_post-grid.scss
+++ b/src/assets/scss/templates/_post-grid.scss
@@ -5,6 +5,10 @@ of the Resource center.
 
 */
 
+.recent-posts-container {
+    margin-top: 30px;
+}
+
 .post-grid {
     @include xy-grid();
     flex-direction: column;
