--- a/src/assets/scss/templates/_banner-small.scss
+++ b/src/assets/scss/templates/_banner-small.scss
@@ -20,10 +20,22 @@
     }
 
     .half-banner-video {
-        position: absolute;
-        min-width: 100%;
-        height: auto;
+        display: none;
+        position: absolute; 
+        top: 0;
+        right: 0; 
+        bottom: 0;
+        min-width: 100%; 
+        min-height: 100%;
+        width: auto; 
+        height: auto; 
         z-index: 0;
+        background-size: cover;
+        overflow: hidden;
+
+        @include breakpoint(medium) {
+            display: block;
+        }
     }
 
     .title {
