--- a/src/assets/scss/templates/_post.scss
+++ b/src/assets/scss/templates/_post.scss
@@ -117,6 +117,11 @@ h5 {
     
     .webfeedsFeaturedVisual {
         margin: 0 auto;
+        display: none !important;
+
+        @include breakpoint(large) {
+            display: block !important;
+        }
     }
 
     #related-right, #related-left {
@@ -239,8 +244,12 @@ h5 {
                 position: relative;
                 margin: 2em auto 0;
                 max-width: 72%;
-                padding: 3em 0;
+                padding: 2.5em 0 0 0;
                 text-align: center;
+
+                @include breakpoint(medium) {
+                    padding: 3em 0;
+                }
 
                 &:before {
                     content: "";
@@ -269,7 +278,11 @@ h5 {
             .nav-next {
                 @include flex;
                 @include flex-direction(column);
-                padding-bottom: 36px;
+                padding-bottom: 20px;
+
+                @include breakpoint(medium) {
+                    padding-bottom: 36px;
+                }
 
                 a {
                     color: $black;
